Jan 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- remove multiplay.co.uk AA master
- fix some function prototypes

Dec 27, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- added support for postal2, no master.

Dec 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix LAN browsing. Only worked by luck.

Dec 15, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix crash caused by wrong reference counting of uservers
- use mkstemp instead of pid based temporary file to avoid symlink attacks

Dec 14, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- --launch now guesses the type from the port if only one argument is given. If
  not enough information is given (no type, no port) it will prompt the user to
  choose the type. This way, it should be possible to use --launch now e.g.
  from within IRC clients where you don't know the type before.
- add second argument to add_server_dialog() to preset the address
- make combo_set_vals() work with empty str argument

Dec 02, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- convert server names from iso-8859-1 to UTF-8 if needed

Nov 30, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- new function create_server_type_menu creates a GtkOptionMenu with all games
- modify statistics dialog to make it smaller, scollbars
- remember size of statistics window
- disable resize grip of status bars in gtk2

Nov 29, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- move help menu item to the left
- pack games list in preferences into a scrolled window

Nov 28, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- split up load_pixmap in load_pixmap, load_pixmap_as_pixmap and
  load_pixmap_as_pixbuf
- set minimize icon as suggested by Jordi (someone know how to make this
  work properly with windowmaker?)
- work around gcc complaining about %c in strftime

Nov 27, 2003: Alex <alex_b@users.sourceforge.net>
- Changed version to 0.9.13.1

Nov 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- released 0.9.13
