@@ -1,6 +1,8 @@
 Jan 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - remove multiplay.co.uk AA master
 - fix some function prototypes
+- --add command line option to just add a server to favorites without launching
+  a game
 
 Dec 27, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - added support for postal2, no master.
